--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <h2>Retention & Deletion</h2>
     <ul>
       <li>You can delete items, tasks, expenses individually in the app.</li>
-      <li>You can request account/data deletion by emailing <a href="mailto:togetherly.app@gmail.com">togetherly.app@gmail.com</a>. We’ll delete your Firebase user and related family data you own or control, subject to technical/legal limitations.</li>
+      <li>You can request account/data deletion by emailing <a href="mailto:birlikte.yapp@gmail.com">birlikte.yapp@gmail.com</a>. We’ll delete your Firebase user and related family data you own or control, subject to technical/legal limitations.</li>
     </ul>
 
     <h2>Children</h2>
@@ -68,10 +68,10 @@
     <p>We rely on Firebase security rules, authenticated access, and role-based permissions. No absolute security can be guaranteed on the internet, but we follow platform best practices.</p>
 
     <h2>Your Rights</h2>
-    <p>Depending on your region, you may have rights to access, rectify, delete, or export your data. Contact us at <a href="mailto:togetherly.app@gmail.com">togetherly.app@gmail.com</a>.</p>
+    <p>Depending on your region, you may have rights to access, rectify, delete, or export your data. Contact us at <a href="mailto:birlikte.yapp@gmail.com">birlikte.yapp@gmail.com</a>.</p>
 
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:togetherly.app@gmail.com">togetherly.app@gmail.com</a></p>
+    <p>Email: <a href="mailto:birlikte.yapp@gmail.com">birlikte.yapp@gmail.com</a></p>
 
     <h2>Changes</h2>
     <p>We may update this policy from time to time. We will adjust the “Last updated” date and, if changes are material, communicate in-app where appropriate.</p>
@@ -114,7 +114,7 @@
     <h2>Saklama & Silme</h2>
     <ul>
       <li>Uygulama içinden tek tek görev, ürün, harcama kayıtlarını silebilirsiniz.</li>
-      <li>Hesap/veri silme için <a href="mailto:togetherly.app@gmail.com">togetherly.app@gmail.com</a> adresine e-posta gönderebilirsiniz. Teknik/hukuki sınırlar dâhilinde Firebase kullanıcınız ve sahip olduğunuz aile verileri silinir.</li>
+      <li>Hesap/veri silme için <a href="mailto:birlikte.yapp@gmail.com">birlikte.yapp@gmail.com</a> adresine e-posta gönderebilirsiniz. Teknik/hukuki sınırlar dâhilinde Firebase kullanıcınız ve sahip olduğunuz aile verileri silinir.</li>
     </ul>
 
     <h2>Çocuklar</h2>
@@ -124,10 +124,10 @@
     <p>Firebase güvenlik kuralları, kimlik doğrulama ve rol tabanlı izinler kullanılır. İnternette mutlak güvenlik garanti edilemese de platform en iyi uygulamaları izlenir.</p>
 
     <h2>Haklarınız</h2>
-    <p>Bölgenize göre verilerinize erişme, düzeltme, silme veya dışa aktarma gibi haklara sahip olabilirsiniz. İletişim: <a href="mailto:togetherly.app@gmail.com">togetherly.app@gmail.com</a></p>
+    <p>Bölgenize göre verilerinize erişme, düzeltme, silme veya dışa aktarma gibi haklara sahip olabilirsiniz. İletişim: <a href="mailto:birlikte.yapp@gmail.com">birlikte.yapp@gmail.com</a></p>
 
     <h2>İletişim</h2>
-    <p>E-posta: <a href="mailto:togetherly.app@gmail.com">togetherly.app@gmail.com</a></p>
+    <p>E-posta: <a href="mailto:birlikte.yapp@gmail.com">birlikte.yapp@gmail.com</a></p>
 
     <h2>Değişiklikler</h2>
     <p>Bu politikayı zaman zaman güncelleyebiliriz. “Son güncelleme” tarihi güncellenir ve önemli değişikliklerde uygulama içi bildirim yapılabilir.</p>
@@ -170,7 +170,7 @@
     <h2>Aufbewahrung & Löschung</h2>
     <ul>
       <li>Einträge (Aufgaben/Artikel/Ausgaben) können in der App gelöscht werden.</li>
-      <li>Fordern Sie die Löschung Ihres Kontos/Ihrer Daten per E-Mail an <a href="mailto:togetherly.app@gmail.com">togetherly.app@gmail.com</a> an. Wir löschen Ihren Firebase-Benutzer und zugehörige Familiendaten, soweit technisch/rechtlich möglich.</li>
+      <li>Fordern Sie die Löschung Ihres Kontos/Ihrer Daten per E-Mail an <a href="mailto:birlikte.yapp@gmail.com">birlikte.yapp@gmail.com</a> an. Wir löschen Ihren Firebase-Benutzer und zugehörige Familiendaten, soweit technisch/rechtlich möglich.</li>
     </ul>
 
     <h2>Kinder</h2>
@@ -180,10 +180,10 @@
     <p>Firebase-Sicherheitsregeln, Authentifizierung und rollenbasierte Berechtigungen. Absolute Sicherheit kann nicht garantiert werden; wir folgen Best Practices.</p>
 
     <h2>Ihre Rechte</h2>
-    <p>Je nach Region haben Sie Rechte auf Auskunft, Berichtigung, Löschung oder Datenübertragbarkeit. Kontakt: <a href="mailto:togetherly.app@gmail.com">togetherly.app@gmail.com</a>.</p>
+    <p>Je nach Region haben Sie Rechte auf Auskunft, Berichtigung, Löschung oder Datenübertragbarkeit. Kontakt: <a href="mailto:birlikte.yapp@gmail.com">birlikte.yapp@gmail.com</a>.</p>
 
     <h2>Kontakt</h2>
-    <p>E-Mail: <a href="mailto:togetherly.app@gmail.com">togetherly.app@gmail.com</a></p>
+    <p>E-Mail: <a href="mailto:birlikte.yapp@gmail.com">birlikte.yapp@gmail.com</a></p>
 
     <h2>Änderungen</h2>
     <p>Diese Richtlinie kann aktualisiert werden. Das Datum „Letzte Aktualisierung“ wird angepasst; bei wesentlichen Änderungen informieren wir ggf. in der App.</p>
